--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-webcam": "^5.0.1",
     "styled-components": "^5.0.1",
     "stylelint": "^13.2.0",
     "stylelint-config-prettier": "^8.0.1",
