--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": ["eslint:recommended", "plugin:react/recommended", "prettier", "prettier/react"],
   "plugins": ["prettier", "react"],
   "env": {
+    "es6": true,
     "browser": true,
     "node": true,
     "jest": true
