create routes for new pages

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "experimentalDecorators": true,
     "baseUrl": "./src",
     "paths": {
       "test-utils": ["./src/test-utils.js"]
