fix firebase deploy command

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "test": "react-app-rewired test",
     "format": "prettier --write '**/*.{js,ts,css,scss,html}'",
     "lint": "eslint '**/*.{js,ts}'",
-    "firebase": "cd functions && npm i && cd .. && firebase deploy --token \"$FIREBASE_TOKEN\""
+    "firebase": "cd functions && npm i && cd .. && firebase deploy --token \"$FIREBASE_TOKEN\" -f"
   },
   "browserslist": {
     "production": [
