--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-spinners": "^0.8.1",
     "react-webcam": "^5.0.1",
     "reactjs-popup": "^1.5.0",
+    "sass": "^1.26.3",
     "styled-components": "^5.0.1",
     "stylelint": "^13.2.0",
     "stylelint-config-prettier": "^8.0.1",
