--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "fake-indexeddb": "^3.0.0",
-    "firebase": "^7.10.0",
+    "firebase": "^7.14.0",
     "firebase-tools": "^7.14.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
+    "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "react": "^16.13.0",
     "react-app-rewired": "^2.1.5",
