--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase-tools": "^7.14.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "lodash": "^4.17.15",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
     "prettier": "^1.19.1",
