--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "remove.bg": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
