--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-scripts": "3.4.0",
     "react-spinners": "^0.8.1",
     "react-webcam": "^5.0.1",
+    "reactjs-popup": "^1.5.0",
     "sass": "^1.26.3",
     "styled-components": "^5.0.1",
     "stylelint": "^13.2.0",
